--- a/src/static/style/app.scss
+++ b/src/static/style/app.scss
@@ -28,25 +28,25 @@ button {
 		background-color: $color-primary;
 		color: #ffffff;
 		font-size: $font-size-base;
-		
+
 		&[disabled] {
 			background-color: #D1D78C;
 		}
-		
+
 		&[plain] {
 			color: $color-primary;
 			border: 1rpx solid $color-primary;
-			
+
 			&.button-hover {
 				color: rgba($color: $color-primary, $alpha: 0.5);
 				border: 1rpx solid rgba($color: $color-primary, $alpha: 0.5);
 			}
 		}
-		
+
 		&.button-hover {
 			background-color: #d5da91;
 		}
-		
+
 		&::after {
 			border: 0;
 		}
@@ -56,7 +56,7 @@ button {
 		&[plain] {
 			color: $text-color-assist;
 			border: 1rpx solid $text-color-assist;
-			
+
 			&.button-hover {
 				color: rgba($color: $text-color-assist, $alpha: 0.5);
 				border: 1rpx solid rgba($color: $text-color-assist, $alpha: 0.5);
@@ -73,7 +73,8 @@ uni-toast {
 	z-index: 10000;
 }
 
-uni-modal, uni-modal .uni-modal {
+uni-modal,
+uni-modal .uni-modal {
 	z-index: 10001;
 }
 
@@ -90,7 +91,7 @@ uni-modal, uni-modal .uni-modal {
 }
 
 .bg-transparent {
-  background-color: transparent !important;
+	background-color: transparent !important;
 }
 
 .bg-primary {
@@ -110,7 +111,7 @@ uni-modal, uni-modal .uni-modal {
 }
 
 .invisible {
-  visibility: hidden !important;
+	visibility: hidden !important;
 }
 
 .d-inline {
@@ -483,4 +484,8 @@ uni-modal, uni-modal .uni-modal {
 
 .p-10 {
 	padding: 10rpx;
+}
+
+uni-actionsheet .uni-actionsheet {
+	z-index: 10001;
 }
